--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -24,7 +24,7 @@
             .col-md-6
               = label_tag 'pages', 'Maximal Page'
               = number_field_tag 'pages_max', nil, min: 1, class: 'form-control'
-        = submit_tag "Search"
+        = submit_tag "Search", class: 'btn btn-primary'
 .row 
   .col-md-12
     .table-responsive.mt-4
