--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,6 +16,7 @@ html lang="en"
     link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap" rel="stylesheet"
     /! Core theme CSS (includes Bootstrap)
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
+    = stylesheet_link_tag "select2", "data-turbo-track": "reload"
     = javascript_importmap_tags
   body#page-top
     nav.navbar.navbar-expand-lg.bg-light.fixed-top.shadow-sm
